fixed nav not showing up on resize

--- a/styles/layout.css
+++ b/styles/layout.css
@@ -11,7 +11,7 @@
 }
 .me{
   margin: 2%;
-  margin-top: 50px;
+  margin-top: 83px;
   border: 1px solid black;
   text-align: center;
   padding: 4%;
